Column headers reported incorrectly after colspan in previous row
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
People
(Reporter: Jamie, Assigned: Jamie)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
RyanVM
:
approval-mozilla-esr78+
|
Details | Review |
STR (with the NVDA screen reader):
- Ensure reporting of column headers is enabled in NVDA (NVDA menu -> Preferences -> Settings -> Document formatting -> Row/column headers).
- Open this test case:
data:text/html,<table><tr><th>a</th><th>b</th></tr><tr><td>c</td><td>d</td></tr><tr><td colspan="2"></td></tr><tr><td>e</td><td>f</td></tr></table>
- Press control+home to move to the top of the document.
- Press control+alt+downArrow thrice to move to the 4th row.
- Press control+alt+rightArrow to move to the next column.
- Expected: NVDA should say "b column 2 f"
- Actual: NVDA says "a column 2 f"
Originally reported as NVDA issue: https://github.com/nvaccess/nvda/issues/11863
Assignee | ||
Updated•2 years ago
|
Updated•2 years ago
|
Assignee | ||
Updated•2 years ago
|
Updated•2 years ago
|
Assignee | ||
Comment 1•2 years ago
|
||
Pushed by jteh@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/9676ae8ce7e9 Don't use the cached column header on a previous table cell if that cell starts in a different column. r=eeejay
Comment 3•2 years ago
|
||
bugherder |
Assignee | ||
Comment 4•2 years ago
|
||
Comment on attachment 9199456 [details]
Bug 1688532: Don't use the cached column header on a previous table cell if that cell starts in a different column.
Beta/Release Uplift Approval Request
- User impact if declined: Incorrect column headers can be reported to screen reader users in some cases, misleading the user.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Only impacts table column header a11y. Simply restricts when a cache gets used.
- String changes made/needed: None.
Comment 5•2 years ago
|
||
Comment on attachment 9199456 [details]
Bug 1688532: Don't use the cached column header on a previous table cell if that cell starts in a different column.
Approved for 86 beta 5, thanks.
Comment 6•2 years ago
|
||
bugherderuplift |
Comment 7•2 years ago
|
||
Is this something we should consider taking on ESR78 also? It grafts cleanly as-landed.
Assignee | ||
Comment 8•2 years ago
|
||
Comment on attachment 9199456 [details]
Bug 1688532: Don't use the cached column header on a previous table cell if that cell starts in a different column.
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: Could cause incorrect info to be reported to screen reader users.
- User impact if declined: Incorrect column headers can be reported to screen reader users in some cases, misleading the user.
- Fix Landed on Version: 86
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Baked on beta and nightly for a month without reported issues. Only impacts table column header a11y. Simply restricts when a cache gets used.
- String or UUID changes made by this patch: None.
Comment 9•2 years ago
|
||
Comment on attachment 9199456 [details]
Bug 1688532: Don't use the cached column header on a previous table cell if that cell starts in a different column.
Approved for 78.9esr.
Comment 10•2 years ago
|
||
bugherderuplift |
Description
•