Bug 1688532: Don't use the cached column header on a previous table cell if that cell starts in a different column. r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D103146