accessible/generic/TableCellAccessible.cpp
@@ -67,7 +67,20 @@ Accessible* TableCellAccessible::PrevColHeader() {
 
     // Check whether the previous table cell has a cached value.
     cachedHeader = cache.GetWeak(tableCell, &inCache);
-    if (inCache && cell->Role() != roles::COLUMNHEADER) {
+    if (
+        // We check the cache first because even though we might not use it,
+        // it's faster than the other conditions.
+        inCache &&
+        // Only use the cached value if:
+        // 1. cell is a table cell which is not a column header. In that case,
+        // cell is the previous header and cachedHeader is the one before that.
+        // We will return cell later.
+        cell->Role() != roles::COLUMNHEADER &&
+        // 2. cell starts in this column. If it starts in a previous column and
+        // extends into this one, its header will be for the starting column,
+        // which is wrong for this cell.
+        // ColExtent is faster than ColIdx, so check that first.
+        (tableCell->ColExtent() == 1 || tableCell->ColIdx() == colIdx)) {
       if (!cachedHeader || !cachedHeader->IsDefunct()) {
         // Cache it for this cell.
         cache.Put(this, RefPtr<Accessible>(cachedHeader));
